--- a/Src/index.html
+++ b/Src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
 
     <title>SciAstra Chatbot</title>
@@ -26,6 +26,6 @@
             <button onclick="sendUserMessage()" >Send</button>
         </div>
     </div>
-    <script src="index1.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
